--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1>Введите ваше ФИО:</h1>
+    <h1>Введите ваше ФИооО:</h1>
     <form id="myForm">
         <input type="text" id="fullName" placeholder="ФИО">
         <button type="submit">Отправить</button>
