--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <div class="container">
     <h1>Введите ФИО</h1>
-    <label for="name">ФИО:</label>
+    <label for="name">ФИОттт:</label>
     <input type="text" id="name" placeholder="Введите ФИО">
     <button onclick="showData()">Вывести данные</button>
     <div id="result"></div>
