--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Введите ФИО</h1>
+    <h1>Введите ФИ</h1>
     <label for="name">ФИОттт:</label>
     <input type="text" id="name" placeholder="Введите ФИО">
     <button onclick="showData()">Вывести данные</button>
