--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>Введите ФИ</h1>
-    <label for="name">ФИОттт:</label>
+    <h1>Введите ФИO</h1>
+    <label for="name">ФИО:</label>
     <input type="text" id="name" placeholder="Введите ФИО">
     <button onclick="showData()">Вывести данные</button>
     <div id="result"></div>
