--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <div id="dataContainer"></div>
   </div>
 
+  <h2>Нормативы</h2>
+  <ul id="normatives">
+    <li>Бег: <span id="running"></span></li>
+    <li>Пресс: <span id="abs"></span></li>
+    <li>Отжимания: <span id="pushups"></span></li>
+    <li>Плавание: <span id="swimming"></span></li>
+  </ul>
+
   <script src="script.js"></script>
 </body>
 </html>
