--- a/index.html
+++ b/index.html
@@ -1,74 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" type="text/css" href="styles.css">
   <title>Страница с данными</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-    }
-
-    .container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      height: 100vh;
-      padding: 20px;
-      text-align: center;
-    }
-
-    h1 {
-      margin-bottom: 20px;
-    }
-
-    input[type="text"] {
-      padding: 8px;
-      font-size: 16px;
-      margin-bottom: 10px;
-    }
-
-    button {
-      padding: 10px 20px;
-      font-size: 16px;
-    }
-
-    .data-container {
-      margin-top: 20px;
-      display: none;
-    }
-
-    .square {
-      width: 100px;
-      height: 100px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 24px;
-      color: #fff;
-      text-transform: uppercase;
-    }
-
-    .green {
-      background-color: #00ff00;
-    }
-
-    .red {
-      background-color: #ff0000;
-    }
-
-    .normatives-container {
-      margin-top: 20px;
-    }
-
-    ul {
-      list-style-type: none;
-      padding: 0;
-    }
-
-    .normatives-container ul li {
-      margin-bottom: 10px;
-    }
-  </style>
 </head>
 <body>
   <div class="container">
