--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <div class="normatives-container" id="normativesContainer">
       <div class="normative-item">
-        <span class="icon">✅</span>
+        <span class="icon"></span>
         <span id="pressNormative">Норматив по прессу</span>
       </div>
       <div class="normative-item">
