--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Сайт для телефона</title>
+  <title>МГТУ Физкультура</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>Сайт для телефона</h1>
+    <h1>МГТУ Физкультура</h1>
     <div class="input-container">
       <input type="text" id="fullNameInput" placeholder="Введите ФИО">
     </div>
@@ -26,11 +26,9 @@
     </div>
     <div class="normatives-container" id="normativesContainer">
       <div class="normative-item">
-        <span class="icon"></span>
         <span id="pressNormative">Норматив по прессу</span>
       </div>
       <div class="normative-item">
-        <span class="icon">✅</span>
         <span id="swimNormative">Норматив по плаванию</span>
       </div>
     </div>
