--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>МГТУ Физкультура</title>
+  <title>МГТУ ФИЗКУЛЬТУРА</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h1>МГТУ Физкультура</h1>
+    <h1>МГТУ ФИЗКУЛЬТУРА</h1>
     <div class="input-container">
       <input type="text" id="fullNameInput" placeholder="Введите ФИО">
     </div>
