--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="button-container">
       <button id="showDataButton">Показать данные</button>
     </div>
-    <div class="data-container">
+    <div class="data-container" id="dataContainer">
       <div class="square score">
         <span class="value" id="scoreValue"></span>
         <span class="label">Баллы</span>
