--- a/index.html
+++ b/index.html
@@ -1,39 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>МГТУ ФИЗКУЛЬТУРА</title>
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Apple Fitness Tracker</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
   <div class="container">
-    <h1>МГТУ ФИЗКУЛЬТУРА</h1>
+    <h1>Apple Fitness Tracker</h1>
+
     <div class="input-container">
-      <input type="text" id="fullNameInput" placeholder="Введите ФИО">
+      <label for="fullName">Введите ФИО:</label>
+      <input type="text" id="fullName" placeholder="Например, Иван Иванов">
     </div>
+
     <div class="button-container">
       <button id="showDataButton">Показать данные</button>
     </div>
-    <div class="data-container" id="dataContainer">
-      <div class="square score">
-        <span class="value" id="scoreValue"></span>
-        <span class="label">Баллы</span>
+
+    <div class="data-container">
+      <div class="square-container">
+        <div class="score square"></div>
+        <div class="visits square"></div>
       </div>
-      <div class="square visits">
-        <span class="value" id="visitsValue"></span>
-        <span class="label">Посещения</span>
-      </div>
-    </div>
-    <div class="normatives-container" id="normativesContainer">
-      <div class="normative-item">
-        <span id="pressNormative">Норматив по прессу</span>
-      </div>
-      <div class="normative-item">
-        <span id="swimNormative">Норматив по плаванию</span>
+
+      <div class="normatives-container">
+        <p>Норматив плавания: <span id="swimNormative"></span></p>
+        <p>Норматив пресса: <span id="pressNormative"></span></p>
       </div>
     </div>
   </div>
 
   <script src="script.js"></script>
 </body>
+
 </html>
