--- a/index.html
+++ b/index.html
@@ -1,40 +1,37 @@
 <!DOCTYPE html>
-<html lang="ru">
-
+<html>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>МГТУ ФИЗКУЛЬТУРА</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
   <div class="container">
-    <h1>МГТУ ФИЗКУЛЬТУРА</h1>
-
-    <div class="input-container">
-      <label for="fullName">Введите ФИО:</label>
-      <input type="text" id="fullName" placeholder="Например, Иван Иванов">
-    </div>
-
-    <div class="button-container">
-      <button id="showDataButton">Показать данные</button>
-    </div>
-
+    <h1>Введите ФИО:</h1>
+    <input type="text" id="fullName" placeholder="ФИО">
+    <button id="showDataButton">Вывести данные</button>
     <div class="data-container">
-      <div class="square-container">
-        <div class="score square"></div>
-        <div class="visits square"></div>
+      <div class="square score">
+        <span id="score"></span>
+        <div class="label">баллы</div>
       </div>
-
+      <div class="square visits">
+        <span id="visits"></span>
+        <div class="label">посещения</div>
+      </div>
       <div class="normatives-container">
-        <p>Норматив плавания: <span id="swimNormative"></span></p>
-        <p>Норматив пресса: <span id="pressNormative"></span></p>
+        <div class="square normative">
+          <span id="pressNormative"></span>
+          <div class="label">норматив пресса</div>
+        </div>
+        <div class="square normative">
+          <span id="swimNormative"></span>
+          <div class="label">норматив плавания</div>
+        </div>
       </div>
     </div>
   </div>
 
   <script src="script.js"></script>
 </body>
-
 </html>
