--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>МГТУ ФИЗКУЛЬТУРА</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>МГТУ фФИЗКУЛЬТУРА</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
