--- a/index.html
+++ b/index.html
@@ -19,26 +19,26 @@
   </div>
 
   <div class="container">
-    <h2 class="title">Сайт для телефона</h2>
-    <div class="data-container">
-      <div class="square">
-        <p class="label">Баллы</p>
-        <p id="score" class="score-value"></p>
+    <div class="panel">
+      <h2 id="studentName" class="student-name"></h2>
+      <div class="data-container">
+        <div class="square">
+          <p class="label">Баллы</p>
+          <p id="score" class="score-value"></p>
+        </div>
+        <div class="square">
+          <p class="label">Посещения</p>
+          <p id="visits" class="visits-value"></p>
+        </div>
       </div>
-      <div class="square">
-        <p class="label">Посещения</p>
-        <p id="visits" class="visits-value"></p>
+
+      <div class="normatives-container">
+        <h3 class="normatives-label">Нормативы:</h3>
+        <ul class="normatives-list">
+          <li><span class="normative-label">Плавание:</span> <span id="swimNormative" class="normative"></span></li>
+          <li><span class="normative-label">Пресс:</span> <span id="pressNormative" class="normative"></span></li>
+        </ul>
       </div>
-    </div>
-
-    <button id="showDataButton" class="show-data-button">Показать данные</button>
-
-    <div class="normatives-container">
-      <h3 class="normatives-label">Нормативы:</h3>
-      <ul class="normatives-list">
-        <li>Плавание: <span id="swimNormative" class="normative"></span></li>
-        <li>Пресс: <span id="pressNormative" class="normative"></span></li>
-      </ul>
     </div>
   </div>
 
