--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
         <div class="visits-square"></div>
         <div class="visits-value"></div>
       </div>
-      <ul class="normatives-list"></ul>
+      <ul class="normatives-list">
+        <li><span class="normative-icon"></span>Press</li>
+        <li><span class="normative-icon"></span>Swim</li>
+      </ul>
     </div>
   </div>
 
