--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <input type="text" id="fullName" placeholder="Имя Фамилия">
       <button id="startButton">Начать</button>
     </div>
-    <p class="author">Голубовский Владислав</p>
+    <p class="author">Автор: Голубовский Владислав</p>
   </div>
 
   <div class="container">
