--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <ul class="normatives-list">
           <li><span class="normative">Норматив плавания:</span> <span id="swimNormative"></span></li>
           <li><span class="normative">Норматив пресса:</span> <span id="pressNormative"></span></li>
+          <button class="back-button">Назад</button>
         </ul>
       </div>
     </div>
