--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <button id="startButton">Начать</button>
     </div>
     <p class="author">Автор: Голубовский Владислав</p>
+    <img src="logo.png" alt="Логотип" class="logo">
   </div>
 
   <div class="container">
@@ -37,9 +38,9 @@
         <ul class="normatives-list">
           <li><span class="normative">Норматив плавания:</span> <span id="swimNormative"></span></li>
           <li><span class="normative">Норматив пресса:</span> <span id="pressNormative"></span></li>
-          <button class="back-button">Назад</button>
         </ul>
       </div>
+      <button class="back-button">Назад</button>
     </div>
   </div>
 
