--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <button id="startButton">Начать</button>
     </div>
     <p class="author">Автор: Голубовский Владислав</p>
-    <img src="logo.png" alt="Логотип" class="logo">
+    <img src="Gerb_MGTU_imeni_Baumana.png" alt="Логотип" class="logo">
   </div>
 
   <div class="container">
