--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <li><span class="normative">Норматив пресса:</span> <span id="pressNormative"></span></li>
         </ul>
       </div>
-      <button class="back-button">Назад</button>
+      </li></li></li><button class="back-button">Назад</button>
     </div>
   </div>
 
