--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h1 class="splash-title">Добро пожаловать!</h1>
       <p class="splash-subtitle">Введите ваше имя:</p>
       <input type="text" id="fullName" placeholder="Имя Фамилия">
-      <button id="startButton">Начать</button>
+      <button id="startButton">Получить данные</button>
     </div>
     <p class="author">Автор: Голубовский Владислав</p>
   </div>
@@ -36,8 +36,8 @@
       <div class="normatives-container">
         <h3 class="normatives-label">Нормативы:</h3>
         <ul class="normatives-list">
-          <li><span class="normative">Норматив плавания:</span> <span id="swimNormative"></span></li>
-          <li><span class="normative">Норматив пресса:</span> <span id="pressNormative"></span></li>
+          <li><span class="normative">Плавание:</span> <span id="swimNormative"></span></li>
+          <li><span class="normative">Пресс:</span> <span id="pressNormative"></span></li>
         </ul>
       </div>
       <button class="back-button">Назад</button>
