--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="splash-container">
     <div class="splash-content">
       <img src="Gerb_MGTU_imeni_Baumana.png" alt="Логотип" class="logo">
-      <h1 class="splash-title">Добро пожаловать!</h1>
+      <h1 class="splash-title">Добро!</h1>
       <p class="splash-subtitle">Введите ваше имя:</p>
       <input type="text" id="fullName" placeholder="Имя Фамилия">
       <button id="startButton">Получить данные</button>
