--- a/index.html
+++ b/index.html
@@ -1,50 +1,270 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <title>Студент</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>AutoUpgrade — Решения для авто</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background: linear-gradient(to right, #f8f9fb, #eef1f6);
+      color: #1a1a1a;
+      overflow-x: hidden;
+    }
+
+    #intro {
+      position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: #ffffff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+      animation: fadeOutIntro 3s forwards 2s;
+    }
+    #intro h1 {
+      font-size: 48px;
+      font-weight: 700;
+      color: #1a1a1a;
+      animation: scalePulse 2s infinite;
+    }
+
+    @keyframes scalePulse {
+      0%, 100% { transform: scale(1); opacity: 1; }
+      50% { transform: scale(1.05); opacity: 0.7; }
+    }
+
+    @keyframes fadeOutIntro {
+      to {
+        opacity: 0;
+        visibility: hidden;
+      }
+    }
+
+    header {
+      max-width: 800px;
+      margin: 100px auto 30px;
+      padding: 30px;
+      background: #ffffffee;
+      border-radius: 24px;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.05);
+      text-align: center;
+      animation: fadeIn 1s ease-out forwards;
+      transform: translateY(20px);
+      opacity: 0;
+    }
+
+    h1 {
+      font-size: 32px;
+      font-weight: 700;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 17px;
+      color: #555;
+    }
+
+    .btn {
+      display: inline-block;
+      margin-top: 20px;
+      padding: 14px 32px;
+      font-size: 16px;
+      font-weight: 600;
+      background: #111;
+      color: #fff;
+      border-radius: 32px;
+      text-decoration: none;
+      transition: all 0.3s ease;
+    }
+    .btn:hover {
+      background: #333;
+      transform: translateY(-2px);
+    }
+
+    section {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+
+    h2 {
+      text-align: center;
+      font-size: 24px;
+      font-weight: 600;
+      margin-bottom: 24px;
+    }
+
+    .card {
+      background: #fff;
+      border-radius: 20px;
+      padding: 20px;
+      margin-bottom: 20px;
+      box-shadow: 0 12px 24px rgba(0,0,0,0.04);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      animation: fadeIn 1.2s ease-out;
+    }
+    .card:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 18px 30px rgba(0,0,0,0.08);
+    }
+
+    .brand {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      font-size: 20px;
+      font-weight: 600;
+      padding: 12px 16px;
+      background: #f6f8fa;
+      border-radius: 16px;
+      cursor: pointer;
+    }
+
+    .models {
+      display: none;
+      margin-top: 12px;
+      animation: slideDown 0.3s ease;
+    }
+
+    .model {
+      background: #f9f9f9;
+      border-radius: 14px;
+      margin-bottom: 12px;
+      padding: 12px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    .model img {
+      width: 100%;
+      max-height: 200px;
+      object-fit: cover;
+      border-radius: 12px;
+    }
+
+    .model-details {
+      font-size: 15px;
+    }
+
+    footer {
+      margin-top: 50px;
+      text-align: center;
+      font-size: 14px;
+      color: #aaa;
+      padding: 20px;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    @keyframes slideDown {
+      from { transform: translateY(-10px); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
+    }
+
+    @media(max-width: 768px){
+      h1 { font-size: 26px; }
+      h2 { font-size: 22px; }
+      .btn { font-size: 15px; padding: 12px 24px; }
+    }
+  </style>
 </head>
-
 <body>
-  <div class="splash-container">
-    <div class="splash-content">
-      <img src="Gerb_MGTU_imeni_Baumana.png" alt="Логотип" class="logo">
-      <h1 class="splash-title">Добро</h1>
-      <p class="splash-subtitle">Введите ваше имя:</p>
-      <input type="text" id="fullName" placeholder="Имя Фамилия">
-      <button id="startButton">Получить данные</button>
-    </div>
-    <p class="author">Автор: Голубовский Владислав</p>
-  </div>
+<div id="intro">
+  <h1>AutoUpgrade</h1>
+</div>
+<header>
+  <h1>Решения для вашего авто</h1>
+  <p>Обновите, настройте, улучшите — быстро, просто и профессионально</p>
+  <a href="#content" class="btn">Узнать больше</a>
+</header>
 
-  <div class="container">
-    <div class="panel">
-      <h2 id="studentName" class="student-name"></h2>
-      <div class="data-container">
-        <div class="square">
-          <span class="label">Баллы</span>
-          <span id="score" class="score-value"></span>
+<div id="content">
+  <section>
+    <h2>Марки и модели</h2>
+
+    <div class="card">
+      <div class="brand" onclick="toggleModels('haval')">
+        <span>Haval</span>
+      </div>
+      <div id="haval" class="models">
+        <div class="model">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/4/4b/Haval_Jolion_PHEV_001.jpg" alt="Haval Jolion" />
+          <div class="model-details"><strong>Jolion</strong> — от 3000₽<br> Устанавливается: русификация, Яндекс, Android Auto</div>
         </div>
-        <div class="square">
-          <span class="label">Посещения</span>
-          <span id="visits" class="visits-value"></span>
+        <div class="model">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/8/80/Haval_F7x_1X7A9369.jpg" alt="Haval F7x" />
+          <div class="model-details"><strong>F7x</strong> — от 3200₽<br> Устанавливается: полная прошивка, камеры 360°, YouTube</div>
         </div>
       </div>
-      <div class="normatives-container">
-        <h3 class="normatives-label">Нормативы:</h3>
-        <ul class="normatives-list">
-          <li><span class="normative">Плавание:</span> <span id="swimNormative"></span></li>
-          <li><span class="normative">Пресс:</span> <span id="pressNormative"></span></li>
-        </ul>
-      </div>
-      <button class="back-button">Назад</button>
     </div>
-  </div>
 
-  <script src="script.js"></script>
+    <div class="card">
+      <div class="brand" onclick="toggleModels('chery')">
+        <span>Chery</span>
+      </div>
+      <div id="chery" class="models">
+        <div class="model">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/f/f3/Chery_Tiggo_7_PRO_1X7A9470.jpg" alt="Tiggo 7 Pro" />
+          <div class="model-details"><strong>Tiggo 7 Pro</strong> — от 2900₽<br> Устанавливается: Android Auto, камера заднего вида, CarPlay</div>
+        </div>
+        <div class="model">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/7/75/Chery_Tiggo_8_PRO_1X7A9561.jpg" alt="Tiggo 8 Pro" />
+          <div class="model-details"><strong>Tiggo 8 Pro</strong> — от 3100₽<br> Устанавливается: расширенные функции мультимедиа, Яндекс.Навигатор</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="brand" onclick="toggleModels('geely')">
+        <span>Geely</span>
+      </div>
+      <div id="geely" class="models">
+        <div class="model">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/d/dc/Geely_Coolray_1X7A9844.jpg" alt="Coolray" />
+          <div class="model-details"><strong>Coolray</strong> — от 2700₽<br> Устанавливается: Google Play, голосовое управление, ТВ онлайн</div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <h2>Контакты</h2>
+    <div class="card" style="text-align:center;">
+      <p>Телефон: +7 (999) 123-45-67</p>
+      <p>Telegram / WhatsApp: @yourname</p>
+      <p>Город: ваш регион</p>
+      <a href="https://t.me/yourname" class="btn">Написать в Telegram</a>
+    </div>
+  </section>
+</div>
+
+<footer>&copy; 2025 AutoUpgrade — Все права защищены</footer>
+
+<script>
+  function toggleModels(id) {
+    const el = document.getElementById(id);
+    if (el.style.display === 'block') {
+      el.style.display = 'none';
+    } else {
+      el.style.display = 'block';
+    }
+  }
+</script>
 </body>
-
 </html>
