--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
       </div>
       <div id="haval" class="models">
         <div class="model">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/4/4b/Haval_Jolion_PHEV_001.jpg" alt="Haval Jolion" />
+          <img src="634.png" alt="Haval Jolion" />
           <div class="model-details"><strong>Jolion</strong> — от 3000₽<br> Устанавливается: русификация, Яндекс, Android Auto</div>
         </div>
         <div class="model">
